minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microproject-deployment
  namespace: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microproject
  template:
    metadata:
      labels:
        app: microproject
    spec:
      containers:
        - image: lalithakashyap30/microproject:latest
          name: microproject
          ports:
            - containerPort: 3000
