minikube/microproject-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"microproject-deployment","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"microproject"}},"template":{"metadata":{"labels":{"app":"microproject"}},"spec":{"containers":[{"image":"lalithakashyap30/microproject:latest","name":"microproject","ports":[{"containerPort":3000}]}]}}}}
  creationTimestamp: "2024-05-22T18:23:53Z"
  generation: 4
  name: microproject-deployment
  namespace: jenkins
  resourceVersion: "42842"
  uid: b1a1aace-108a-4018-942e-45a2622b3b0e
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: microproject
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microproject
    spec:
      containers:
      - image: lalithakashyap30/microproject:latest
        imagePullPolicy: Always
        name: microproject
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2024-05-23T16:48:41Z"
    lastUpdateTime: "2024-05-23T16:48:44Z"
    message: ReplicaSet "microproject-deployment-6bdc799446" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-05-28T12:28:09Z"
    lastUpdateTime: "2024-05-28T12:28:09Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
