minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microproject-service
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: microproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
