minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microproject-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microproject.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microproject-service
                port:
                  number: 80
